<resources>
    <string name="app_name">Regristration App</string>
    <string name="RegistrationForm">RegistrationForm</string>
    <string name="RegistrationForm2">Registration Form</string>
    <string name="AdventureClub">Welcome To Adventure Learning Club</string>
    <string name="FullName">Full Name</string>
    <string name="FirstName">First Name</string>
    <string name="LastName">Last Name</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="ID">Student ID</string>
    <string name="School">School</string>
    <string name="Email">Email</string>
    <string name="Phone">Phone</string>
    <string name="Submit">Submit</string>
</resources>